--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -30,3 +30,12 @@ a {
     /* 文本超出时，显示省略标记 */
     text-overflow:ellipsis;
 }
+
+.mb8 {
+    margin-bottom: 8px;
+}
+
+.top-right-btn {
+    /*position: relative;*/
+    /*float: right;*/
+}
